tests/rand/07-fail-for-tuple-enum.rs
use enum_derived::Rand;

#[derive(Rand)]
pub enum Messages {
    Email,
    Letter(String),
    Bil,
}

fn main() {}

